# upstox_instrument_query

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cli.py  pyproject.toml  pytest.ini  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: post-release.yml  publish.yml  release.yml  test-coverage.yml
tests/: conftest.py  test_cli.py  test_database.py  test_integration.py  test_query.py  test_utils.py
tests/data/: sample_instruments.json
upstox_instrument_query/: __init__.py  cli.py  database.py  query.py  utils.py
